# conversiontools-python

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
conversiontools/: __init__.py  api.py  client.py  request.py
conversiontools/api/: config.py  files.py  http.py  tasks.py
conversiontools/models/: __init__.py  task.py
conversiontools/types/: __init__.py  config.py
conversiontools/utils/: __init__.py  errors.py  polling.py  progress.py  retry.py  validation.py
examples/: async_example.py  simple_conversion.py  test.py
